💄 Update Title line height to avoid clipping

--- a/src/styles.css
+++ b/src/styles.css
@@ -197,6 +197,7 @@ h4 {
 h1 {
   font-size: 36px;
   font-weight: 700;
+  line-height: 2.5rem;
 }
 
 h2 {
